setup.py ignore update

--- a/CookieTTS/scripts/Progressively Grow WaveFlow.ipynb
+++ b/CookieTTS/scripts/Progressively Grow WaveFlow.ipynb
@@ -821,10 +821,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "157713/157714: Skipped                                                                                                    has had unfair advantage For quite some time, and it's certainly obvious That your students have been using magic For their own benefit.txt                                                                                                                 \r"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-737e793eccec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'**/*.wav'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecursive\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mlen_files\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiles\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{i:>6}/{len_files:<6}: {file}{\" \"*100}'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'\\r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munlink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "from glob import glob\n",
+    "import shutil\n",
+    "import os\n",
+    "os.chdir('H:\\ClipperDatasetV2\\SlicedDialogue')\n",
+    "out_dir = r'E:\\downloads\\Clipper_MLP\\Sliced Dialogue'\n",
+    "files = [*glob('**/*.flac', recursive=True), *glob('**/*.txt', recursive=True)]\n",
+    "len_files = len(files)\n",
+    "for i, file in enumerate(files):\n",
+    "    outpath = os.path.join(out_dir, file)\n",
+    "    try:\n",
+    "        if not os.path.exists(os.path.dirname(outpath)):\n",
+    "            os.makedirs(os.path.dirname(outpath))\n",
+    "        if not os.path.exists(outpath):\n",
+    "            shutil.copyfile(file, outpath)\n",
+    "            print(f'{i:>6}/{len_files:<6}: {outpath}{\" \"*100}', end='\\r')\n",
+    "        else:\n",
+    "            print(f'{i:>6}/{len_files:<6}: {\"Skipped\"}{\" \"*100}', end='\\r')\n",
+    "    except:\n",
+    "        pass\n",
+    "del files, len_files\n",
+    "\n",
+    "os.chdir(out_dir)\n",
+    "files = glob('**/*.wav', recursive=True)\n",
+    "len_files = len(files)\n",
+    "for i, file in files:\n",
+    "    print(f'{i:>6}/{len_files:<6}: {file}{\" \"*100}', end='\\r')\n",
+    "    os.unlink(file)"
+   ]
   },
   {
    "cell_type": "code",
