--- a/CookieTTS/scripts/Progressively Grow WaveFlow.ipynb
+++ b/CookieTTS/scripts/Progressively Grow WaveFlow.ipynb
@@ -821,29 +821,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "157713/157714: Skipped                                                                                                    has had unfair advantage For quite some time, and it's certainly obvious That your students have been using magic For their own benefit.txt                                                                                                                 \r"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-737e793eccec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'**/*.wav'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecursive\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mlen_files\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiles\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{i:>6}/{len_files:<6}: {file}{\" \"*100}'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'\\r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munlink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+      "  1853/1854  : Songs\\02_14_54_Twilight_Sad Singing__I think that means it's time for #me# to #go#.wav                                                                                                                                                                    \r"
      ]
     }
    ],
    "source": [
+    "# updating Dataset from local copy, since it'll take multiple days to download otherwise!\n",
+    "\n",
     "from glob import glob\n",
     "import shutil\n",
     "import os\n",
@@ -868,9 +859,68 @@
     "os.chdir(out_dir)\n",
     "files = glob('**/*.wav', recursive=True)\n",
     "len_files = len(files)\n",
-    "for i, file in files:\n",
+    "for i, file in enumerate(files):\n",
     "    print(f'{i:>6}/{len_files:<6}: {file}{\" \"*100}', end='\\r')\n",
     "    os.unlink(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "134863/134864: Special source\\s9e26\\00_18_31_Twilight_Neutral__That's all right, because I know exactly where to send you.flac                                                                                                                                                                                                                                                                                                                     \r"
+     ]
+    }
+   ],
+   "source": [
+    "os.chdir(out_dir)\n",
+    "files = glob('**/*.flac', recursive=True)\n",
+    "len_files = len(files)\n",
+    "for i, file in enumerate(files):\n",
+    "    if os.path.exists(os.path.splitext(file)[0]+'..flac'):\n",
+    "        os.unlink(file)\n",
+    "    print(f'{i:>6}/{len_files:<6}: {file}{\" \"*100}', end='\\r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.2485)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "x = torch.rand(5,5)\n",
+    "print(x.mean()/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.2485)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((x/2).mean())"
    ]
   },
   {
