FlowTTS NaN/inf/loss fix, moved Clipper delete/cleanup to preprocesssing

--- a/CookieTTS/scripts/Progressively Grow WaveFlow.ipynb
+++ b/CookieTTS/scripts/Progressively Grow WaveFlow.ipynb
@@ -821,14 +821,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1853/1854  : Songs\\02_14_54_Twilight_Sad Singing__I think that means it's time for #me# to #go#.wav                                                                                                                                                                    \r"
+      "Changed Directory. Searching for Files.\n",
+      "157713/157714: E:\\downloads\\Clipper_MLP\\Sliced Dialogue\\EQG\\EQG Friendship Games\\00_24_55_Rainbow_Neutral_Noisy_You really didn't have to do that.txt                                                                                                                                                                                                                                 \r"
      ]
     }
    ],
@@ -840,6 +841,7 @@
     "import os\n",
     "os.chdir('H:\\ClipperDatasetV2\\SlicedDialogue')\n",
     "out_dir = r'E:\\downloads\\Clipper_MLP\\Sliced Dialogue'\n",
+    "print('Changed Directory. Searching for Files...')\n",
     "files = [*glob('**/*.flac', recursive=True), *glob('**/*.txt', recursive=True)]\n",
     "len_files = len(files)\n",
     "for i, file in enumerate(files):\n",
